# cpp-project

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  setup.sh
.github/workflows/: ci.yml
include/: example.h
src/: example.cpp
tests/: CMakeLists.txt  dummy.cpp  main.cpp
